<resources>
    <string name="app_name">My Application</string>
    <string name="homework1">Homework 1</string>
    <string name="homework2">Homework 2</string>
    <string name="homework3">Homework 3</string>
    <string name="homework4">Homework 4</string>
    <string name="homework5">Homework 5</string>
    <string name="homework6">Homework 6</string>
    <string name="enter_url">Please enter image url</string>
    <string name="buttonLoad">Load image</string>
    <string name="flags">Flags</string>
    <string name="animation">Animation</string>
    <string name="potatoes">Potatoes</string>
    <string name="beet">Beet</string>
    <string name="cabbage">Cabbage</string>
    <string name="counter">0</string>
    <string name="brest_region">Brest Region</string>
    <string name="vitebsk_region">Vitebsk Region</string>
    <string name="grodno_region">Grodno Region</string>
    <string name="gomel_region">Gomel Region</string>
    <string name="minsk_region">Minsk Region</string>
    <string name="mogilev_region">Mogilev Region</string>
    <string name="start_harvesting">Start harvesting</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="add_sort">Add sort</string>
    <string name="coffee_list">Coffee list</string>
    <string name="add_coffee_name">Enter name of coffee</string>
    <string name="coffee_cost">Enter the cost of the coffee</string>
    <string name="add_coffee">Add coffee</string>
    <string name="error_text">"You should fill in all fields!"</string>
    <string name="error">"Error"</string>
    <string name="ok">"OK"</string>
    <string name="success">"Success"</string>
    <string name="success_coffee">"Coffee has been added"</string>
    <string name="success_register">"You are register!"</string>
    <string name="come_in">"Come in"</string>
    <string name="happy_mother_s_day">Happy Mother`s Day</string>
    <string name="open_a_postcard">Open a postcard</string>
    <string name="mother_message1">Who care for us and guide us. You can feel their love and gentleness as they walk through life beside us.</string>
    <string name="mother_message2">The do great things for us every day they whisper in our ears, they evn hold us in their hearts when we are filled with all our fear.</string>
    <string name="mother_message3">They are always there to give a hug and try to make us smile. They threat us with respect and love, they treat us like their child.</string>
    <string name="mother_message4">God blessed me with an Angel, I am proud to call my own. She is been with me throughout my life, been with me as I have grown.</string>
    <string name="mother_message5">She is guided me the best she can, she is taught me like no other, and I am thankful I am the lucky one who get is to call her…</string>
    <string name="homework_7">Homework 7</string>
    <string name="homework_8">Homework 8</string>
    <string name="homework_9">Homework 9</string>
    <string name="enter_brand_of_car">Enter brand of car</string>
    <string name="enter_max_speed_of_car">Enter max speed of car</string>
    <string name="enter_fuel_consumption">Enter fuel consumption</string>
    <string name="show_data_base">Show data base</string>
    <string name="add_to_database">Add to database</string>
    <string name="delete_database">Delete database</string>
    <string name="db_delete_message">The database has been deleted</string>
    <string name="db_add">The database has been added</string>
    <string name="enter_car">Enter car</string>
    <string name="get_crypto_currency">Get cryptocurrency</string>
    <string name="crypto_currency">Cryptocurrency</string>
    <string name="percent">%</string>
    <string name="dollar">$</string>
    <string name="error_response">Error response</string>
    <string name="homework_10">Homework 10</string>
    <string name="homework_11">Homework 11</string>
    <string name="homework_12">Homework 12</string>
    <string name="green">#00ff7f</string>
    <string name="red">#744e3b</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="count">Count</string>
    <string name="number_484941654894">484941654894</string>
    <string name="number_wrong">Number entered incorrectly.</string>

</resources>